# pipette_opt

./: .gitignore  CITATION.cff  LICENSE  README.md  auxil.py  dp_method.py  howto_manual.txt  hub_spoke.py  input_generator.py  level_zero_constructs.json  lp_method.py  lp_reorder.py  lp_solver.py  pipette_opt.py  pytest.py  requirements.txt  setup.cfg  setup.py  statespace_methods.py  test_inp.py  testing.py  tsp_lp_solver.py  tsp_method.py  tsp_reorder.py  vis_cont.py
src/ppopt/: __init__.py  auxil.py  basic.py  moclo.py  startstop.py  visualise.py
src/ppopt/dp/: __init__.py  dp_method.py
src/ppopt/estimate_runtimes/: estimate_runtimes.py
src/ppopt/lp/: __init__.py  lp_method.py  lp_reorder.py  lp_solver.py
src/ppopt/statespace/: __init__.py  statespace_methods.py
src/ppopt/test/: __init__.py  input_generator.py  pytest.py  test_inp.py  testing.py
